<resources>
    <string name="app_name">StudentManagement</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="str_teacher_name">Chào %s</string>

    <string name="numbers_of_the_grade">Sĩ số: <font color='#1053A7'><b>%d</b></font> Học sinh</string>
    <string name="name_of_the_grade">Lớp: %s</string>
    <string name="teacher_of_the_grade">GVCN: %s</string>
    <string name="number_and_noun">%1$d %2$s</string>
    <string name="id_of_the_subject">MMH: %s</string>
    <string name="name_of_the_subject">Tên: %s</string>
    <string name="coefficient_of_the_subject">Hệ số: %d</string>
    <string name="login">Đăng nhập</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="password">Mật khẩu</string>
    <string name="email_address">Email</string>

    <!--Teacher-->
    <string name="id_of_the_teacher">MGV: %d</string>
    <string name="name_of_the_teacher">Tên: %s</string>
    <string name="phone_of_the_teacher">SDT: %s</string>
    <string name="account_of_the_teacher">TK: %s</string>

    <string name="id_of_the_account">Mã: %s</string>
    <string name="email_of_the_account"> - Email: %s</string>

    <string name="account_item">(%4s)-%s</string>

    <string name="id_teacher">Id: %d</string>
    <string name="register">Đăng ký</string>
    <string name="otp_string_01">Mã OTP đã được gửi về số điện thoại:</string>
    <string name="validate_password_01">Mật khẩu phải có ít nhất 6 ký tự.</string>
    <string name="validate_repeat_password_01">Mật khẩu phải trùng với mật khẩu ở trên.</string>
    <string name="validate_repeat_password_02">Mật khẩu phải trùng với mật khẩu mới.</string>
    <string name="validate_email_01">Email không hợp lệ.</string>
    <string name="validate_phone_01">Số điện thoại không hợp lệ.</string>
    <string name="profile_01">Thông tin cá nhân</string>
    <string name="profile_02">Đổi mật khẩu</string>
    <string name="profile_03">Đăng xuất</string>
    <string name="profile_title_02">Tài khoản</string>
    <string name="profile_title_01">Hồ sơ cá nhân</string>


    <string name="subject_screen_title">Danh sách môn học</string>
    <string name="mark_screen_title">Nhập điểm</string>
    <string name="student_screen_title">Danh sách học sinh</string>
    <string name="grade_screen_title">Danh sách lớp</string>
    <string name="teacher_screen_title">Danh sách giáo viên</string>
    <string name="report_screen_title">Thống kê</string>


    <string name="subject_screen_search_hint">Tìm kiếm môn học</string>
    <string name="grade_screen_search_hint">Tìm kiếm lớp</string>
    <string name="teacher_screen_search_hint">Tìm kiếm giáo viên</string>
    <string name="student_screen_search_hint">Tìm kiếm học sinh</string>
    <string name="mark_screen_search_hint">Tìm kiếm học sinh</string>


    <string name="chip_filter">Lọc</string>
    <string name="chip_sort">Sắp xếp</string>


</resources>