<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <!--<ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:visibleState="@{loginViewModel.isLoadingProgressBar()}" />-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_marginTop="48dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:orientation="vertical"
                    tools:context=".feature.login.view.LoginFragment">
                    <!-- How to change FontFamily -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:text="@string/login"
                        android:textColor="@color/black"
                        android:textSize="36sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_layout_email"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/email_address"
                        android:nextFocusDown="@id/edit_text_password"
                        app:boxStrokeWidth="1dp"
                        app:hintEnabled="true"
                        app:startIconCheckable="true"
                        app:startIconDrawable="@drawable/ic_baseline_alternate_email_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_text_email"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:fontFamily="@font/poppins_regular"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_layout_password"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        app:boxStrokeWidth="1dp"
                        app:endIconMode="password_toggle"
                        app:startIconDrawable="@drawable/ic_baseline_lock_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_text_password"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:fontFamily="@font/poppins_regular"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/forgot_password"
                        android:textColor="@color/purple_500"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/login"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <!--
                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:gravity="center_horizontal"
                                            android:orientation="horizontal">

                                            <TextView
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="New to MovieApp? " />

                                            <TextView
                                                android:id="@+id/txt_register"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_marginBottom="16dp"
                                                android:text="Register"
                                                android:textColor="@color/purple_500"
                                                android:textStyle="bold" />

                                        </LinearLayout>
                    -->
                </LinearLayout>


            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="282dp"
                android:layout_marginTop="24dp"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                android:src="@drawable/back_to_school"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>


    </ScrollView>

</layout>